<resources>
    <string name="app_name">Login Aplikasi</string>
    <string name="tEmail">Email</string>
    <string name="tpasswprod">Password</string>
    <string name="bsigin">Sign-in</string>
    <string name="btnsigin">OKE</string>
    <string name="tData">Data Anda</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil password</string>
    <string name="labe2">Login Berhasil</string>
    <string name="mnDaftar">Pendaftaran</string>
    <string name="oi.Daftar">Daftar</string>
    <string name="oi.nama">Masukkan Nama</string>
    <string name="oi.email">Masukkan Email</string>
    <string name="oi.pass">Masukkan Password</string>
    <string name="oi.pass2">Masukkan Password Kembali</string>
    <string name="oi.alamat">Masukkan Alamat</string>
    <string name="todo">TODO</string>
</resources>